--- a/frontend/login_admin.html
+++ b/frontend/login_admin.html
@@ -336,7 +336,7 @@
           let backendApiUrl;
           const localApiUrl = "http://localhost:8000/api/auth";
           // IMPORTANT: Replace this with your *actual* Cloud Run service URL
-          const cloudRunApiUrl = "https://your-docnest-backend-servicename-xxxxxx-yy.a.run.app/api/auth";
+          const cloudRunApiUrl = "https://docnest-780614596615.asia-south1.run.app/api/auth";
 
           if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
             backendApiUrl = localApiUrl;
