--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -751,6 +751,13 @@
         transform: rotate(360deg);
       }
     }
+
+     @media (min-width: 1024px) { /* Corresponds to Tailwind's lg: breakpoint */
+      #main-grid-container.left-column-expanded {
+        /* Makes the left column take 2/3 of space, and right column 1/3 */
+        grid-template-columns: 2fr 1fr;
+      }
+    }
   </style>
 </head>
 <body>
@@ -844,7 +851,7 @@
       </div>
     </header>
 
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-[1800px] mx-auto">
+    <div id="main-grid-container" class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-[1800px] mx-auto">
       <!-- Left Column -->
       <div class="space-y-8">
         <!-- Folder Structure Card -->
@@ -856,26 +863,28 @@
               </svg>
               Folder Structure
             </h2>
-            <button
-              onclick="promptNewRoot()"
-              class="action-icon-btn add text-2xl hover:scale-110 transition-transform"
-              title="Add New Root Folder"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                stroke-width="2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M12 4v16m8-8H4"
-                />
-              </svg>
-            </button>
+            <div class="flex items-center gap-2">
+                <button
+                  onclick="promptNewRoot()"
+                  class="action-icon-btn add text-2xl hover:scale-110 transition-transform"
+                  title="Add New Root Folder"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                    stroke-width="2"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 4v16m8-8H4"
+                    />
+                  </svg>
+                </button>
+            </div>
           </div>
           <div id="tree-container" class="max-h-[calc(100vh-350px)] overflow-y-auto rounded-lg border border-[var(--border-primary)] bg-[var(--bg-card)]">
             <div id="tree" class="tree-root space-y-0.5 p-2"></div>
@@ -1623,6 +1632,44 @@ const docnestLogo = document.getElementById('docnest-logo');
       .replace(/'/g, "&#39;")
       .replace(/`/g, "&#96;");
   }
+
+// --- Width Toggle for Folder Structure ---
+function setupWidthToggle() {
+    const toggleBtn = document.getElementById('toggle-width-btn');
+    const gridContainer = document.getElementById('main-grid-container');
+
+    if (!toggleBtn || !gridContainer) {
+        console.warn("Width toggle elements not found, skipping setup.");
+        return;
+    }
+
+    // This function applies the correct state to the UI
+    const applyWidthState = (isExpanded) => {
+        gridContainer.classList.toggle('left-column-expanded', isExpanded);
+        toggleBtn.title = isExpanded ? 'Shrink Folder Column' : 'Expand Folder Column';
+
+        // Optional: Visually change the icon based on state
+        const icon = toggleBtn.querySelector('svg');
+        if (icon) {
+            // Flips the icon horizontally when expanded
+            icon.style.transform = isExpanded ? 'scaleX(-1)' : 'scaleX(1)';
+        }
+    };
+
+    // Check localStorage for a saved state when the page loads
+    const savedState = localStorage.getItem('adminFolderWidthExpanded') === 'true';
+    applyWidthState(savedState);
+
+    // Add the click listener to the button
+    toggleBtn.addEventListener('click', () => {
+        const isCurrentlyExpanded = gridContainer.classList.contains('left-column-expanded');
+        const newState = !isCurrentlyExpanded;
+        // Save the new state to localStorage to remember the choice
+        localStorage.setItem('adminFolderWidthExpanded', newState);
+        applyWidthState(newState);
+    });
+}
+
 
   // --- Tree Search ---
   // (Your existing filterTreeDOM and its related code)
@@ -3158,6 +3205,7 @@ function showInfoDropdown(event, id, type, name, description) {
 
   // --- Initialization ---
   function initializeAdminPanel() {
+    setupWidthToggle();
     console.log("Admin Panel: Initializing data with BASE URL:", BASE_API_URL); // Use the dynamic var
     if (firebaseAuth && firebaseAuth.currentUser) {
       fetchTree();
