--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -751,13 +751,6 @@
         transform: rotate(360deg);
       }
     }
-
-     @media (min-width: 1024px) { /* Corresponds to Tailwind's lg: breakpoint */
-      #main-grid-container.left-column-expanded {
-        /* Makes the left column take 2/3 of space, and right column 1/3 */
-        grid-template-columns: 2fr 1fr;
-      }
-    }
   </style>
 </head>
 <body>
@@ -851,7 +844,7 @@
       </div>
     </header>
 
-    <div id="main-grid-container" class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-[1800px] mx-auto">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-[1800px] mx-auto">
       <!-- Left Column -->
       <div class="space-y-8">
         <!-- Folder Structure Card -->
@@ -863,28 +856,26 @@
               </svg>
               Folder Structure
             </h2>
-            <div class="flex items-center gap-2">
-                <button
-                  onclick="promptNewRoot()"
-                  class="action-icon-btn add text-2xl hover:scale-110 transition-transform"
-                  title="Add New Root Folder"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="h-6 w-6"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke="currentColor"
-                    stroke-width="2"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M12 4v16m8-8H4"
-                    />
-                  </svg>
-                </button>
-            </div>
+            <button
+              onclick="promptNewRoot()"
+              class="action-icon-btn add text-2xl hover:scale-110 transition-transform"
+              title="Add New Root Folder"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M12 4v16m8-8H4"
+                />
+              </svg>
+            </button>
           </div>
           <div id="tree-container" class="max-h-[calc(100vh-350px)] overflow-y-auto rounded-lg border border-[var(--border-primary)] bg-[var(--bg-card)]">
             <div id="tree" class="tree-root space-y-0.5 p-2"></div>
@@ -1633,44 +1624,6 @@ const docnestLogo = document.getElementById('docnest-logo');
       .replace(/`/g, "&#96;");
   }
 
-// --- Width Toggle for Folder Structure ---
-function setupWidthToggle() {
-    const toggleBtn = document.getElementById('toggle-width-btn');
-    const gridContainer = document.getElementById('main-grid-container');
-
-    if (!toggleBtn || !gridContainer) {
-        console.warn("Width toggle elements not found, skipping setup.");
-        return;
-    }
-
-    // This function applies the correct state to the UI
-    const applyWidthState = (isExpanded) => {
-        gridContainer.classList.toggle('left-column-expanded', isExpanded);
-        toggleBtn.title = isExpanded ? 'Shrink Folder Column' : 'Expand Folder Column';
-
-        // Optional: Visually change the icon based on state
-        const icon = toggleBtn.querySelector('svg');
-        if (icon) {
-            // Flips the icon horizontally when expanded
-            icon.style.transform = isExpanded ? 'scaleX(-1)' : 'scaleX(1)';
-        }
-    };
-
-    // Check localStorage for a saved state when the page loads
-    const savedState = localStorage.getItem('adminFolderWidthExpanded') === 'true';
-    applyWidthState(savedState);
-
-    // Add the click listener to the button
-    toggleBtn.addEventListener('click', () => {
-        const isCurrentlyExpanded = gridContainer.classList.contains('left-column-expanded');
-        const newState = !isCurrentlyExpanded;
-        // Save the new state to localStorage to remember the choice
-        localStorage.setItem('adminFolderWidthExpanded', newState);
-        applyWidthState(newState);
-    });
-}
-
-
   // --- Tree Search ---
   // (Your existing filterTreeDOM and its related code)
   // Ensure searchTreeInput is correctly selected.
@@ -1895,6 +1848,8 @@ function toggleTreeNode(nodeId, doToggle = true) {
 
 // REPLACE your entire existing renderTree function with this new, complete version.
 
+// REPLACE your entire existing renderTree function with this new, corrected version.
+
 function renderTree(nodes) {
   const fragment = document.createDocumentFragment();
 
@@ -1919,10 +1874,12 @@ function renderTree(nodes) {
     // --- Main Node Container ---
     const nodeDiv = document.createElement('div');
     nodeDiv.className = 'tree-node';
-    nodeDiv.dataset.nodeId = n.id;
-    nodeDiv.dataset.nodeName = n.name;
-    nodeDiv.dataset.description = n.description || "";
-    nodeDiv.dataset.nodeType = 'NODE';
+    Object.assign(nodeDiv.dataset, {
+      nodeId: n.id,
+      nodeName: n.name,
+      description: n.description || "",
+      nodeType: 'NODE'
+    });
 
     // --- Node Content (the visible row) ---
     const nodeContentDiv = document.createElement('div');
@@ -1935,11 +1892,13 @@ function renderTree(nodes) {
     const toggleIconHTML = isExpandable
       ? `<span id="toggle-icon-${n.id}" class="tree-toggle-icon collapsed"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transform transition-transform duration-200" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" /></svg></span>`
       : '<span class="tree-toggle-icon w-5 h-5 mr-1"></span>';
-
+    
+    // --- FIX IS HERE ---
+    // Removed the "truncate" class from the span below and added "whitespace-nowrap" to prevent wrapping.
     textSpan.innerHTML = `
         ${toggleIconHTML}
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1 tree-node-icon flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" /></svg>
-        <span class="node-display-name truncate pr-1">${escapeJSString(n.name)}</span> 
+        <span class="node-display-name pr-1 whitespace-nowrap">${escapeJSString(n.name)}</span> 
         <span class="text-xs text-[var(--text-tertiary)] ml-1.5 flex-shrink-0">(ID: ${n.id})</span>
     `;
 
@@ -1974,7 +1933,6 @@ function renderTree(nodes) {
     actionsDiv.append(addButton, infoButton, editButton, deleteButton);
     nodeContentDiv.append(textSpan, actionsDiv);
 
-    // --- Form & Children Containers ---
     const formDiv = document.createElement('div');
     formDiv.id = `form-${n.id}`;
     formDiv.className = 'form-inline mt-2 ml-5 p-4 bg-[var(--bg-inline-form)] rounded-lg border border-[var(--border-primary)] shadow-md';
@@ -1984,22 +1942,17 @@ function renderTree(nodes) {
     childrenContainer.id = `children-${n.id}`;
     childrenContainer.className = 'tree-children-container collapsed';
 
-    // --- Recursive calls and Artifacts ---
     if (hasChildren) {
       childrenContainer.appendChild(renderTree(n.children));
     }
 
     if (hasArtifacts) {
       n.artifacts.forEach(a => {
-        // --- THIS PART IS NOW FULLY REFACTORED ---
         const artifactWrapper = document.createElement('div');
         artifactWrapper.className = 'tree-artifact-wrapper';
         Object.assign(artifactWrapper.dataset, {
-          nodeId: a.id,
-          nodeName: a.title,
-          description: a.description || "",
-          nodeType: "ARTIFACT",
-          parentNodeId: n.id,
+          nodeId: a.id, nodeName: a.title, description: a.description || "",
+          nodeType: "ARTIFACT", parentNodeId: n.id,
         });
 
         const artifactContent = document.createElement('div');
@@ -2008,9 +1961,11 @@ function renderTree(nodes) {
         const artifactText = document.createElement('span');
         artifactText.className = 'tree-artifact-text clickable flex items-center text-sm flex-grow';
         artifactText.title = `View details for: ${escapeJSString(a.title)}`;
+        // --- FIX IS HERE ---
+        // Removed "truncate" class from the span below and added "whitespace-nowrap".
         artifactText.innerHTML = `
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2 tree-artifact-icon flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" /></svg>
-          <span class="truncate pr-1">${escapeJSString(a.title)}</span>`;
+          <span class="pr-1 whitespace-nowrap">${escapeJSString(a.title)}</span>`;
         artifactText.onclick = () => showArtifactDetailsModal(a.title, a.description, a.link);
 
         const artifactActions = document.createElement('div');
@@ -2041,7 +1996,6 @@ function renderTree(nodes) {
       });
     }
 
-    // --- Final Assembly ---
     nodeDiv.append(nodeContentDiv, formDiv, childrenContainer);
     fragment.appendChild(nodeDiv);
   });
@@ -3205,7 +3159,6 @@ function showInfoDropdown(event, id, type, name, description) {
 
   // --- Initialization ---
   function initializeAdminPanel() {
-    setupWidthToggle();
     console.log("Admin Panel: Initializing data with BASE URL:", BASE_API_URL); // Use the dynamic var
     if (firebaseAuth && firebaseAuth.currentUser) {
       fetchTree();
